# aleam

./: .gitignore  ALEAM_RESEARCH_PAPER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTROPIA_RESEARCH_PAPER.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: benchmark.yml  build-and-publish.yml  build.yml  docs.yml  publish.yml  security.yml  tests.yml
aleam/: __init__.py  ai.py  arrays.py  core.py  cuda_integration.py  cuda_kernels.py  cupy_integration.py  dask_integration.py  distributions.py  jax_integration.py  pandas_integration.py  polars_integration.py  py.typed  pymc_integration.py  sources.py  tensorflow_integration.py  torch_integration.py  utils.py  xarray_integration.py
benchmarks/: benchmark_core.py
docs/: ALEAM_RESEARCH_PAPER.md  CHANGELOG.md  INSTALLATION.md  ROADMAP.md  index.md
examples/: ai_ml_features.py  array_operations.py  basic_usage.py  cuda_integration.py  distributions.py  monte_carlo_pi.py  pytorch_integration.py  reinforcement_learning.py  tensorflow_integration.py
include/aleam/: aleam.h
src/aleam/ai/: ai.cpp  ai.h  augmentation.h  gradient_noise.h  latent_sampler.h
src/aleam/arrays/: array_utils.h  arrays.cpp  arrays.h
src/aleam/bindings/: exports.h  module.cpp
src/aleam/core/: aleam_core.cpp  aleam_core.h  constants.h  utils.h
src/aleam/cuda/: cuda_kernels.cu  cuda_kernels.h  cuda_normal.cu  cuda_uniform.cu  cuda_utils.h
src/aleam/distributions/: beta.h  chi_square.h  dirichlet.h  distributions.cpp  distributions.h  exponential.h  f_distribution.h  gamma.h  laplace.h  logistic.h  lognormal.h  normal.h  pareto.h  poisson.h  student_t.h  weibull.h
src/aleam/entropy/: entropy.h  entropy_darwin.h  entropy_linux.h  entropy_windows.h
src/aleam/hash/: blake2s.h  blake2s_config.h
src/aleam/integrations/: __init__.py  cupy_integration.cpp  cupy_integration.h  dask_integration.cpp  dask_integration.h  integrations.cpp  integrations.h  jax_integration.cpp  jax_integration.h  pandas_integration.cpp  pandas_integration.h  polars_integration.cpp  polars_integration.h  pymc_integration.cpp  pymc_integration.h  tensorflow_integration.cpp  tensorflow_integration.h  torch_integration.cpp  torch_integration.h  xarray_integration.cpp  xarray_integration.h
tests/: __init__.py  test_ai.py  test_arrays.py  test_core.py  test_sources.py  test_statistical.py  test_utils.py
