# pyproject.toml - Aleam Project Configuration
# Version: 1.0.3
# License: MIT

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy>=1.24.0",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "aleam"
version = "1.0.3"
description = "True randomness for AI and machine learning. Non-recursive, stateless, cryptographically secure random number generator."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Fardin Sabid", email = "contact.fardinsabid@gmail.com" }
]
maintainers = [
    { name = "Fardin Sabid", email = "contact.fardinsabid@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=4.0",
]
torch = [
    "torch>=2.0.0",
]
tensorflow = [
    "tensorflow>=2.12.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]
cupy = [
    "cupy-cuda12x>=12.0.0",
]
pandas = [
    "pandas>=1.5.0",
]
polars = [
    "polars>=0.18.0",
]
xarray = [
    "xarray>=2023.0.0",
]
dask = [
    "dask>=2023.0.0",
]
scipy = [
    "scipy>=1.9.0",
]
pymc = [
    "pymc>=5.0.0",
]
all = [
    "torch>=2.0.0",
    "tensorflow>=2.12.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "cupy-cuda12x>=12.0.0",
    "pandas>=1.5.0",
    "polars>=0.18.0",
    "xarray>=2023.0.0",
    "dask>=2023.0.0",
    "scipy>=1.9.0",
    "pymc>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/fardinsabid/aleam"
Repository = "https://github.com/fardinsabid/aleam"
Documentation = "https://github.com/fardinsabid/aleam/docs"
Issues = "https://github.com/fardinsabid/aleam/issues"
Changelog = "https://github.com/fardinsabid/aleam/releases"

[project.scripts]
aleam = "aleam.__main__:main"

[tool.setuptools]
packages = { find = { include = ["aleam*"] } }
include-package-data = true

[tool.setuptools.package-data]
aleam = [
    "py.typed",
    "_c_core.so",
    "_c_core.pyd",
    "_c_core.dylib",
]

[tool.setuptools_scm]
write_to = "aleam/_version.py"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["aleam"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=aleam",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests as requiring GPU",
    "integration: marks tests as integration tests",
]

[tool.pytest-benchmark]
group_by = "group"
warmup = true
warmup_iterations = 10

[tool.coverage.run]
source = ["aleam"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_version.py",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["aleam"]